--- a/экзаменационное_задание_Хасан_Мохаммад/requirements.txt
+++ b/экзаменационное_задание_Хасан_Мохаммад/requirements.txt
@@ -1,12 +1,29 @@
-Flask>=2.3.3
-Flask-SQLAlchemy>=3.0.5
-Flask-Login>=0.6.3
-Flask-Migrate>=4.0.5
-Flask-WTF>=1.1.1
-Flask-Bootstrap>=3.3.7.1
-Werkzeug>=2.3.7
-WTForms>=3.0.1
-bleach>=6.0.0
-python-dotenv>=1.0.0
-gunicorn>=21.2.0
-SQLAlchemy>=1.4.0
+alembic==1.16.1
+bleach==6.2.0
+blinker==1.9.0
+cffi==1.17.1
+click==8.2.1
+colorama==0.4.6
+dominate==2.9.1
+Flask==3.1.1
+Flask-Bootstrap==3.3.7.1
+Flask-EasyMDE==1.0
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+greenlet==3.2.3
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+Markdown==3.8
+MarkupSafe==3.0.2
+misaka==2.1.1
+pycparser==2.22
+python-dotenv==1.1.0
+SQLAlchemy==2.0.41
+typing_extensions==4.14.0
+visitor==0.1.3
+webencodings==0.5.1
+Werkzeug==3.1.3
+WTForms==3.2.1
