--- a/экзаменационное_задание_Хасан_Мохаммад/requirements.txt
+++ b/экзаменационное_задание_Хасан_Мохаммад/requirements.txt
@@ -27,3 +27,15 @@ visitor==0.1.3
 webencodings==0.5.1
 Werkzeug==3.1.3
 WTForms==3.2.1
+Flask>=2.3.3
+Flask-SQLAlchemy>=3.0.5
+Flask-Login>=0.6.3
+Flask-Migrate>=4.0.5
+Flask-WTF>=1.1.1
+Flask-Bootstrap>=3.3.7.1
+Werkzeug>=2.3.7
+WTForms>=3.0.1
+bleach>=6.0.0
+python-dotenv>=1.0.0
+gunicorn>=21.2.0
+psycopg2-binary>=2.9.6
